--- a/src/1-root/fronkensteen_template.html
+++ b/src/1-root/fronkensteen_template.html
@@ -11,129 +11,147 @@
     <meta name="apple-mobile-web-app-title" content="Fronkensteen">
     <link rel="shortcut icon" id="favicon-png" type="image/png" href="data:;base64,iVBORw0KGgo=">
     <title>Fronkensteen</title>
-    <style>
-    </style>
   </head>
+  
   <body id="fronkensteen-content-container">
-    <div id="fronkensteen-top-toolbar-container" class="topcoat-navigation-bar">
-    </div>
-    <div id="fronkensteen-bottom-toolbar-container" class="topcoat-tab-bar">
-    </div>
-     <div id="fronkensteen-content">
-     </div>
+    <noscript id="noscript">
+      Yeah, there's absolutely no way this can work with JavaScript turned off. Sorry, my friend.
+    </noscript>
 
-     <div id="upload_download">
-       <a id="fronkensteen-download-link"></a>
-     </div>
-  <script type="text/javascript">
-
-  /*!
- * natural-sort.js
- * ===============
- * Sorting with support for numbers, dates, unicode and more.
- *
- * http://github.com/studio-b12/natural-sort
- * MIT License, © Studio B12 GmbH 2014
- *
- *//*
- *
- * Idea by Dave Koelle
- * Original implementation by Jim Palmer
- * Modified by Tomek Wiszniewski
- *
- */
-
-var naturalSort = function naturalSort (options) { 'use strict';
-  if (!options) options = {};
-
-  return function(a, b) {
-    var EQUAL = 0;
-    var GREATER = (options.direction == 'desc' ?
-      -1 :
-      1
-    );
-    var SMALLER = -GREATER;
-
-    var re = /(^-?[0-9]+(\.?[0-9]*)[df]?e?[0-9]?$|^0x[0-9a-f]+$|[0-9]+)/gi;
-    var sre = /(^[ ]*|[ ]*$)/g;
-    var dre = /(^([\w ]+,?[\w ]+)?[\w ]+,?[\w ]+\d+:\d+(:\d+)?[\w ]?|^\d{1,4}[\/\-]\d{1,4}[\/\-]\d{1,4}|^\w+, \w+ \d+, \d{4})/;
-    var hre = /^0x[0-9a-f]+$/i;
-    var ore = /^0/;
-
-    var normalize = function normalize (value) {
-      var string = '' + value;
-      return (options.caseSensitive ?
-        string :
-        string.toLowerCase()
-      );
-    };
-
-    // Normalize values to strings
-    var x = normalize(a).replace(sre, '') || '';
-    var y = normalize(b).replace(sre, '') || '';
-
-    // chunk/tokenize
-    var xN = x.replace(re, '\0$1\0').replace(/\0$/,'').replace(/^\0/,'').split('\0');
-    var yN = y.replace(re, '\0$1\0').replace(/\0$/,'').replace(/^\0/,'').split('\0');
-
-    // Return immediately if at least one of the values is empty.
-    if (!x && !y) return EQUAL;
-    if (!x &&  y) return GREATER;
-    if ( x && !y) return SMALLER;
-
-    // numeric, hex or date detection
-    var xD = parseInt(x.match(hre)) || (xN.length != 1 && x.match(dre) && Date.parse(x));
-    var yD = parseInt(y.match(hre)) || xD && y.match(dre) && Date.parse(y) || null;
-    var oFxNcL, oFyNcL;
-
-    // first try and sort Hex codes or Dates
-    if (yD) {
-      if ( xD < yD ) return SMALLER;
-      else if ( xD > yD ) return GREATER;
+  <script type="text/javascript" id="fronkensteen_file_system">
+$$$FILESYSTEM$$$
+  </script>
+  <script type="text/javascript" id="fronkensteen_system_boot">
+  function cleanSystem(keepFileSystem){
+    let styles = document.getElementsByTagName('style');
+    let stylearr = Array.prototype.slice.call(styles)
+    for(var i = 0; i < stylearr.length; i++){
+      stylearr[i].remove();
     }
+    if(keepFileSystem !== true){
+      fronkensteen_fs = null;
+    }
+    cleanScripts();
+  }
+  function cleanScripts(){
+    let scripts = document.getElementsByTagName('script');
+    let scriptarr = Array.prototype.slice.call(scripts)
 
-    // natural sorting through split numeric strings and default strings
-    for (var cLoc=0, numS=Math.max(xN.length, yN.length); cLoc < numS; cLoc++) {
+    for(var i = 0; i < scriptarr.length; i++){
+      let script = scriptarr[i];
+      script.remove();
+      }
+    }
+  const urlParams = new URLSearchParams(window.location.search);
 
-      // find floats not starting with '0', string or 0 if not defined (Clint Priest)
-      oFxNcL = !(xN[cLoc] || '').match(ore) && parseFloat(xN[cLoc]) || xN[cLoc] || 0;
-      oFyNcL = !(yN[cLoc] || '').match(ore) && parseFloat(yN[cLoc]) || yN[cLoc] || 0;
+    /*!
+   * natural-sort.js
+   * ===============
+   * Sorting with support for numbers, dates, unicode and more.
+   *
+   * http://github.com/studio-b12/natural-sort
+   * MIT License, © Studio B12 GmbH 2014
+   *
+   *//*
+   *
+   * Idea by Dave Koelle
+   * Original implementation by Jim Palmer
+   * Modified by Tomek Wiszniewski
+   *
+   */
 
-      // handle numeric vs string comparison - number < string - (Kyle Adams)
-      if (isNaN(oFxNcL) !== isNaN(oFyNcL)) return (isNaN(oFxNcL)) ? GREATER : SMALLER;
+  var naturalSort = function naturalSort (options) { 'use strict';
+    if (!options) options = {};
 
-      // rely on string comparison if different types - i.e. '02' < 2 != '02' < '2'
-      else if (typeof oFxNcL !== typeof oFyNcL) {
-        oFxNcL += '';
-        oFyNcL += '';
+    return function(a, b) {
+      var EQUAL = 0;
+      var GREATER = (options.direction == 'desc' ?
+        -1 :
+        1
+      );
+      var SMALLER = -GREATER;
+
+      var re = /(^-?[0-9]+(\.?[0-9]*)[df]?e?[0-9]?$|^0x[0-9a-f]+$|[0-9]+)/gi;
+      var sre = /(^[ ]*|[ ]*$)/g;
+      var dre = /(^([\w ]+,?[\w ]+)?[\w ]+,?[\w ]+\d+:\d+(:\d+)?[\w ]?|^\d{1,4}[\/\-]\d{1,4}[\/\-]\d{1,4}|^\w+, \w+ \d+, \d{4})/;
+      var hre = /^0x[0-9a-f]+$/i;
+      var ore = /^0/;
+
+      var normalize = function normalize (value) {
+        var string = '' + value;
+        return (options.caseSensitive ?
+          string :
+          string.toLowerCase()
+        );
+      };
+
+      // Normalize values to strings
+      var x = normalize(a).replace(sre, '') || '';
+      var y = normalize(b).replace(sre, '') || '';
+
+      // chunk/tokenize
+      var xN = x.replace(re, '\0$1\0').replace(/\0$/,'').replace(/^\0/,'').split('\0');
+      var yN = y.replace(re, '\0$1\0').replace(/\0$/,'').replace(/^\0/,'').split('\0');
+
+      // Return immediately if at least one of the values is empty.
+      if (!x && !y) return EQUAL;
+      if (!x &&  y) return GREATER;
+      if ( x && !y) return SMALLER;
+
+      // numeric, hex or date detection
+      var xD = parseInt(x.match(hre)) || (xN.length != 1 && x.match(dre) && Date.parse(x));
+      var yD = parseInt(y.match(hre)) || xD && y.match(dre) && Date.parse(y) || null;
+      var oFxNcL, oFyNcL;
+
+      // first try and sort Hex codes or Dates
+      if (yD) {
+        if ( xD < yD ) return SMALLER;
+        else if ( xD > yD ) return GREATER;
       }
 
-      if (oFxNcL < oFyNcL) return SMALLER;
-      if (oFxNcL > oFyNcL) return GREATER;
+      // natural sorting through split numeric strings and default strings
+      for (var cLoc=0, numS=Math.max(xN.length, yN.length); cLoc < numS; cLoc++) {
+
+        // find floats not starting with '0', string or 0 if not defined (Clint Priest)
+        oFxNcL = !(xN[cLoc] || '').match(ore) && parseFloat(xN[cLoc]) || xN[cLoc] || 0;
+        oFyNcL = !(yN[cLoc] || '').match(ore) && parseFloat(yN[cLoc]) || yN[cLoc] || 0;
+
+        // handle numeric vs string comparison - number < string - (Kyle Adams)
+        if (isNaN(oFxNcL) !== isNaN(oFyNcL)) return (isNaN(oFxNcL)) ? GREATER : SMALLER;
+
+        // rely on string comparison if different types - i.e. '02' < 2 != '02' < '2'
+        else if (typeof oFxNcL !== typeof oFyNcL) {
+          oFxNcL += '';
+          oFyNcL += '';
+        }
+
+        if (oFxNcL < oFyNcL) return SMALLER;
+        if (oFxNcL > oFyNcL) return GREATER;
+      }
+
+      return EQUAL;
+    };
+  };
+
+  (function (root, factory) {
+    if (typeof exports === 'object') {
+      module.exports = factory();
+    } else {
+      root.naturalSort = factory();
     }
+  }(this, function () {
 
-    return EQUAL;
-  };
-};
+    return naturalSort;
 
-(function (root, factory) {
-  if (typeof exports === 'object') {
-    module.exports = factory();
-  } else {
-    root.naturalSort = factory();
-  }
-}(this, function () {
+  }));
 
-  return naturalSort;
-
-}));
-</script>
-  <script type="text/javascript">
-  // Bare-bones object.
-  // Functions and data fields are added to this object by the various packages.
-  let Fronkensteen = {
-    CumulativeErrors:[]
-  };
+function initSystem(){
+  Fronkensteen = {};
+  Fronkenmark = {};
+  Fronkenmark.preScripts = {};
+  Fronkenmark.customTags = {};
+  Fronkenmark.substitutions = {};
+  Fronkensteen.CumulativeErrors = [];
   Fronkensteen.bytes_to_base_64 = function(buffer){
     var arr = new Uint8Array(buffer)
     let raw = '';
@@ -142,17 +160,6 @@ var naturalSort = function naturalSort (options) { 'use strict';
     }
     return btoa(raw);
   }
-
-</script>
-  <script type="text/javascript">
-    const urlParams = new URLSearchParams(window.location.search);
-  </script>
-  <script type="text/javascript">
-$$$FILESYSTEM$$$
-  </script>
-  <script type="text/javascript">
-
-
   // Fronkensteen launcher statistics.
   Fronkensteen.cssLoaded = [];
   Fronkensteen.cssErrors = [];
@@ -229,6 +236,7 @@ Fronkensteen.handleLoadError = function(filename,error){
     Fronkensteen.parseJSProcedureDefs(filename,jsCode)
     script.appendChild(document.createTextNode(jsCode));
     document.body.appendChild(script);
+    script.remove()
     }
     catch(e){
       Fronkensteen.handleLoadError(filename,e);
@@ -342,7 +350,6 @@ Fronkensteen.handleLoadError = function(filename,error){
     let jsQueue = [];
     let schemeQueue = [];
     let cssQueue = [];
-    //document.getElementById("fronkensteen-wrapper").innerHTML = ""
     let filenames = Object.keys(fronkensteen_fs).sort(naturalSort());
     for(var i = 0; i < filenames.length; i++){
         let filename = filenames[i];
@@ -357,14 +364,12 @@ Fronkensteen.handleLoadError = function(filename,error){
       }
     }
     for(var i = 0; i < cssQueue.length; i++){
-      //console.log("Processing: " + cssQueue[i])
       Fronkensteen.addCSS(cssQueue[i])
       if(Fronkensteen.loadError === true){
         return;
       }
     }
     for(var i = 0; i < jsQueue.length; i++){
-    //  console.log("Processing: " + jsQueue[i])
       Fronkensteen.addJS(jsQueue[i]);
       if(Fronkensteen.loadError === true){
         return;
@@ -377,19 +382,11 @@ Fronkensteen.handleLoadError = function(filename,error){
     intp2 = new BiwaScheme.Interpreter(Fronkensteen.scheme_intepreter);
     intp2.evaluate("(define load hereload)");
     for(var i = 0; i < schemeQueue.length; i++){
-      //console.log("Processing: " + schemeQueue[i])
       Fronkensteen.addScheme(schemeQueue[i])
       if(Fronkensteen.loadError === true){
         return;
       }
     }
-
-    /*const remote = urlParams.get('remote');
-    if(remote !== null){
-      if(Fronkensteen.remoteREPL !== undefined){
-        Fronkensteen.remoteREPL.connect(true,null);
-      }
-    } */
     setTimeout(function(){
       let result = intp2.evaluate("(system-launch)");
       if(Fronkensteen.CumulativeErrors.length !== 0){
@@ -399,14 +396,26 @@ Fronkensteen.handleLoadError = function(filename,error){
       }
       },100)
   }
+}
 
 function startREPL(){
     Fronkensteen.remoteREPL.connect(true,null);
 }
-
+Fronkensteen = {};
+if(typeof (Fronkenmark) === "undefined"){
+  Fronkenmark = {};
+  Fronkenmark.preScripts = {};
+  Fronkenmark.customTags = {};
+  Fronkenmark.substitutions = {};
+}
+initSystem();
 Fronkensteen.launchSystem();
 
  </script>
-
+ <script type="text/javascript">
+ setTimeout(function(){
+   cleanScripts()
+ },25);
+</script>
 </body>
 </html>
