--- a/src/1-root/fronkensteen_template.html
+++ b/src/1-root/fronkensteen_template.html
@@ -3,14 +3,16 @@
 <!-- Fronkensteen Base Template. Copyright 2019-2020 by Anthony W. Hursh. MIT License. -->
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Cache-Control" content="private, max-age=604800, immutable">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Fronkensteen">
     <link rel="shortcut icon" id="favicon-png" type="image/png" href="data:;base64,iVBORw0KGgo=">
     <title>Fronkensteen</title>
+    <script type="text/javascript">
+      let fronkensteen_fs;
+      let urlParams;
+   </script>
   </head>
 
   <body id="fronkensteen-content-container">
@@ -42,7 +44,7 @@ $$$FILESYSTEM$$$
       script.remove();
       }
     }
-  const urlParams = new URLSearchParams(window.location.search);
+   urlParams = new URLSearchParams(window.location.search);
 
     /*!
    * natural-sort.js
