Switching to plain-text editor from CodeMirror. Sadly, just can't make it work on mobile.

--- a/src/1-root/fronkensteen_template.html
+++ b/src/1-root/fronkensteen_template.html
@@ -10,8 +10,7 @@
     <link rel="shortcut icon" id="favicon-png" type="image/png" href="data:;base64,iVBORw0KGgo=">
     <title>Fronkensteen</title>
     <script type="text/javascript">
-      let fronkensteen_fs;
-      let urlParams;
+      var fronkensteen_fs;
    </script>
   </head>
 
@@ -44,8 +43,7 @@ $$$FILESYSTEM$$$
       script.remove();
       }
     }
-   urlParams = new URLSearchParams(window.location.search);
-
+  
     /*!
    * natural-sort.js
    * ===============
