--- a/src/1-root/fronkensteen_template.html
+++ b/src/1-root/fronkensteen_template.html
@@ -3,11 +3,11 @@
 <!-- Fronkensteen Base Template. Copyright 2019-2020 by Anthony W. Hursh. MIT License. -->
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Cache-Control" content="private, max-age=604800, immutable">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Fronkensteen">
     <link rel="shortcut icon" id="favicon-png" type="image/png" href="data:;base64,iVBORw0KGgo=">
+    <link rel="manifest" href="manifest.webmanifest">
     <title>Fronkensteen</title>
     <script type="text/javascript">
       var fronkensteen_fs;
@@ -43,7 +43,7 @@ $$$FILESYSTEM$$$
       script.remove();
       }
     }
-  
+
     /*!
    * natural-sort.js
    * ===============
@@ -322,12 +322,14 @@ Fronkensteen.handleLoadError = function(filename,error){
       }
     }
     for(var i = 0; i < cssQueue.length; i++){
+      console.log("adding " + cssQueue[i])
       Fronkensteen.addCSS(cssQueue[i])
       if(Fronkensteen.loadError === true){
         return;
       }
     }
     for(var i = 0; i < jsQueue.length; i++){
+      console.log("adding " + jsQueue[i])
       Fronkensteen.addJS(jsQueue[i]);
       if(Fronkensteen.loadError === true){
         return;
@@ -340,6 +342,7 @@ Fronkensteen.handleLoadError = function(filename,error){
     intp2 = new BiwaScheme.Interpreter(Fronkensteen.scheme_intepreter);
     intp2.evaluate("(define load hereload)");
     for(var i = 0; i < schemeQueue.length; i++){
+      console.log("adding " + schemeQueue[i])
       Fronkensteen.addScheme(schemeQueue[i])
       if(Fronkensteen.loadError === true){
         return;
@@ -367,6 +370,7 @@ if(typeof (Fronkenmark) === "undefined"){
   Fronkenmark.substitutions = {};
 }
 initSystem();
+console.log("System inited.");
 Fronkensteen.launchSystem();
 
  </script>
@@ -374,6 +378,19 @@ Fronkensteen.launchSystem();
  setTimeout(function(){
    cleanScripts()
  },25);
+
+ if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register(
+   'sw.js',
+   {scope: './'})
+  .then((reg) => {
+    // registration worked
+    console.log('Registration succeeded. Scope is ' + reg.scope);
+  }).catch((error) => {
+    // registration failed
+    console.log('Registration failed with ' + error);
+  });
+}
 </script>
 </body>
 </html>
